@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-23T02:06:15Z",
-  "count" : 351,
+  "timestamp" : "2022-07-06T02:28:44Z",
+  "count" : 283,
   "count_minmax" : [ 120, 351 ],
-  "count_decinc" : [ -0, +351 ],
+  "count_decinc" : [ -68, +351 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
