@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-05T16:37:21Z",
-  "count" : 246,
-  "count_minmax" : [ 120, 246 ],
-  "count_decinc" : [ -0, +246 ],
+  "timestamp" : "2022-07-06T02:28:44Z",
+  "count" : 352,
+  "count_minmax" : [ 120, 352 ],
+  "count_decinc" : [ -0, +352 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
