@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-07-05T16:37:21Z",
-  "count_outdated" : 35767,
-  "uniques_outdated" : 672,
-  "count" : 40650,
-  "uniques" : 701,
+  "timestamp" : "2022-07-06T02:28:44Z",
+  "count_outdated" : 36119,
+  "uniques_outdated" : 675,
+  "count" : 40983,
+  "uniques" : 703,
   "clones" : [
     {
-      "timestamp": "2022-06-21T00:00:00Z",
-      "count": 57,
-      "count_minmax": [ 57, 352 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ]
-    },
-    {
       "timestamp": "2022-06-22T00:00:00Z",
-      "count": 351,
+      "count": 283,
       "count_minmax": [ 120, 351 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-05T00:00:00Z",
-      "count": 246,
-      "count_minmax": [ 120, 246 ],
+      "count": 352,
+      "count_minmax": [ 120, 352 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
