@@ -1,15 +1,10 @@
 {
-  "count": 4883,
+  "count": 4864,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-06-21T00:00:00Z",
-      "count": 57,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-22T00:00:00Z",
-      "count": 351,
+      "count": 283,
       "uniques": 1
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-07-05T00:00:00Z",
-      "count": 246,
+      "count": 352,
       "uniques": 2
     }
   ]
